--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,20 +1,22 @@
-body, .header, .nav, .page, {
+.card {
   border: 1px solid red;
 }
 
 .page {
   width: 90%;
   border: 5px solid black;
+  display: flex;
+  flex-direction: column;
   }
 
 .header {
-  height: 119px;
+  min-height: 119px;
   background-color: rgb(85,74,88);
   display: flex;
 }
 
 .header__title {
-  width: 33%;
+  width: 33.33%;
   height: 71px;
   line-height: 1.1em;
   font-size: 32px;
@@ -26,7 +28,7 @@ body, .header, .nav, .page, {
 }
 
 .nav {
-  width: 67%;
+  width: 66.67%;
   height: 119px;
   background-color: rgb(64,186,188);
   display: flex;
@@ -45,5 +47,29 @@ body, .header, .nav, .page, {
 
 .nav__title_active {
   color: black;
+}
 
+.content {
+  min-height: 300px;
+  background-image: url(/images/building.jpg);
+  background-repeat: no-repeat;
+  background-size: cover;
+  margin: 0;
+  display: flex;
+}
+
+.cards {
+  list-style: none;
+  margin: 0;
+  padding: 40px 0 0;
+  display: flex;
+  flex-wrap: wrap-reverse;
+  width: 100%;
+}
+
+.card {
+  margin: 0;
+  width: 33.33%;
+  height: 250px;
+  box-sizing: border-box;
 }
