--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,17 +1,38 @@
-.card {
+/* ВРЕМЕННЫЕ */
+.card,
+.card__title,
+.card__text {
   border: 1px solid red;
 }
 
+/* .page {
+  min-width: 1100px;
+  max-width: 1600px;
+  margin: 0 auto;
+  font-family: 'Helvetica Neue', Arial, sans-serif;
+  display: flex;
+  flex-direction: column;
+  position: relative;
+} */
+
+/* ОБЩИЕ */
 .page {
-  width: 90%;
+  min-width: 1100px;
+  max-width: 1600px;
+  height: 100%;
+  /*не совсем понял зачкм*/
+  margin: 0 auto;
   border: 5px solid black;
   display: flex;
   flex-direction: column;
-  }
+  font-family: Arial, Helvetica, sans-serif;
+  font-size: 15px;
+}
 
+/* ЗАГОЛОВОК */
 .header {
   min-height: 119px;
-  background-color: rgb(85,74,88);
+  background-color: rgb(85, 74, 88);
   display: flex;
 }
 
@@ -20,19 +41,19 @@
   height: 71px;
   line-height: 1.1em;
   font-size: 32px;
-  font-family: jura, sans-serif;
   color: rgb(255, 255, 255);
   font-weight: 100;
   padding-left: 20px;
   margin: auto;
 }
 
+/* МЕНЮ */
 .nav {
   width: 66.67%;
   height: 119px;
-  background-color: rgb(64,186,188);
+  background-color: rgb(64, 186, 188);
   display: flex;
-  justify-content:space-between;
+  justify-content: space-between;
 
 }
 
@@ -49,6 +70,7 @@
   color: black;
 }
 
+/* ОСНОВНОЕ */
 .content {
   min-height: 300px;
   background-image: url(/images/building.jpg);
@@ -63,13 +85,69 @@
   margin: 0;
   padding: 40px 0 0;
   display: flex;
-  flex-wrap: wrap-reverse;
+  flex-wrap: wrap;
   width: 100%;
 }
 
 .card {
   margin: 0;
   width: 33.33%;
-  height: 250px;
+  height: 350px;
   box-sizing: border-box;
+  display: flex;
+  flex-direction: column;
+}
+
+.card__title {
+  height: 20%;
+  line-height: 1.1em;
+  font-size: 32px;
+  color: rgb(255, 255, 255);
+  font-weight: 100;
+  padding: 20px 20px;
+  margin: 0;
+}
+
+.card__text {
+  height: 70%;
+  line-height: 1.3em;
+  font-size: 19px;
+  color: rgb(255, 255, 255);
+  font-weight: 100;
+  padding-left: 20px;
+  margin: 0;
+}
+
+
+.card_theme_dark-grey {
+  background-color: rgb(85, 74, 88);
+}
+
+.card_theme_grey {
+  background-color: lightgray;
+  color: rgb(91, 91, 91);
+}
+
+.card_theme_light-blue {
+  background-color: rgb(64, 186, 188);
+}
+
+.card_theme_white {
+  background-color: white;
+  color: rgb(64, 186, 188);
+  }
+
+.card__text_theme_white {
+  color: rgb(91, 91, 91);
+}
+
+.card__link {
+  height: 10%;
+  text-decoration: none;
+  line-height: 20px;
+  color: rgb(64, 186, 188);
+  text-transform: uppercase;
+  display: flex;
+  flex-direction: row-reverse;
+  padding: 10px 20px;
 }
