--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,28 +1,9 @@
-/* ВРЕМЕННЫЕ */
-.card,
-.card__title,
-.card__text {
-  border: 1px solid red;
-}
-
-/* .page {
-  min-width: 1100px;
-  max-width: 1600px;
-  margin: 0 auto;
-  font-family: 'Helvetica Neue', Arial, sans-serif;
-  display: flex;
-  flex-direction: column;
-  position: relative;
-} */
-
 /* ОБЩИЕ */
 .page {
   min-width: 1100px;
   max-width: 1600px;
   height: 100%;
-  /*не совсем понял зачкм*/
   margin: 0 auto;
-  border: 5px solid black;
   display: flex;
   flex-direction: column;
   font-family: Arial, Helvetica, sans-serif;
@@ -37,7 +18,7 @@
 }
 
 .header__title {
-  width: 33.33%;
+  width: 30%;
   height: 71px;
   line-height: 1.1em;
   font-size: 32px;
@@ -78,12 +59,13 @@
   background-size: cover;
   margin: 0;
   display: flex;
+  padding-bottom: 60px;
 }
 
 .cards {
   list-style: none;
   margin: 0;
-  padding: 40px 0 0;
+  padding: 60px 0 0;
   display: flex;
   flex-wrap: wrap;
   width: 100%;
@@ -151,3 +133,11 @@
   flex-direction: row-reverse;
   padding: 10px 20px;
 }
+
+.footer {
+  min-height: 119px;
+  background-color: lightgray;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+ }
