--- a/styles/styles.css
+++ b/styles/styles.css
@@ -68,6 +68,11 @@
   color: rgb(255, 255, 255);
   text-transform: uppercase;
   margin: auto;
+  transition: transform .2s linear;
+}
+
+.nav__title:hover {
+  transform: scale(1.2);
 }
 
 .nav__title_active {
@@ -146,15 +151,23 @@
   color: rgb(91, 91, 91);
 }
 
-.card__link {
+.card__links {
   height: 10%;
+  display: flex;
+  flex-direction: row-reverse;
+  padding: 10px 20px;
+}
+
+.card__link {
   text-decoration: none;
   line-height: 20px;
   color: rgb(64, 186, 188);
   text-transform: uppercase;
-  display: flex;
-  flex-direction: row-reverse;
-  padding: 10px 20px;
+  transition: transform .2s linear;
+}
+
+.card__link:hover {
+  transform: scale(1.2);
 }
 
 .footer {
