--- a/styles/styles.css
+++ b/styles/styles.css
@@ -90,6 +90,23 @@
   padding-bottom: 60px;
 }
 
+.subtitle {
+  min-height: 119px;
+  background-color: rgb(85, 74, 88);
+  display: flex;
+}
+
+.subtitle__text {
+  width: 30%;
+  height: 71px;
+  line-height: 1.1em;
+  font-size: 35px;
+  color: rgb(255, 255, 255);
+  font-weight: 100;
+  padding-left: 20px;
+  margin: auto;
+}
+
 .cards {
   list-style: none;
   margin: 0;
