--- a/styles/styles.css
+++ b/styles/styles.css
@@ -47,7 +47,6 @@
   font-size: 35px;
   color: rgb(255, 255, 255);
   font-weight: 100;
-  padding-left: 20px;
   margin: auto;
 }
 
@@ -88,6 +87,10 @@
   margin: 0;
   display: flex;
   padding-bottom: 60px;
+}
+
+.firm-description {
+  box-sizing: content-box;
 }
 
 .subtitle {
@@ -131,7 +134,7 @@
   font-size: 32px;
   color: rgb(255, 255, 255);
   font-weight: 100;
-  padding: 20px 20px;
+  padding: 20px 20px 0;
   margin: 0;
 }
 
@@ -141,10 +144,19 @@
   font-size: 19px;
   color: rgb(255, 255, 255);
   font-weight: 100;
-  padding-left: 20px;
+  padding: 20px;
   margin: 0;
 }
 
+.card__text_type_description {
+  line-height: 1.3em;
+  font-size: 19px;
+  color: rgb(255, 255, 255);
+  font-weight: 100;
+  padding: 20px;
+  margin: 0;
+  box-sizing: content-box;
+}
 
 .card_theme_dark-grey {
   background-color: rgb(85, 74, 88);
@@ -166,6 +178,10 @@
 
 .card__text_theme_white {
   color: rgb(91, 91, 91);
+}
+
+.card_type_header {
+  height: 76px;
 }
 
 .card__links {
