--- a/styles/styles.css
+++ b/styles/styles.css
@@ -41,13 +41,15 @@
 }
 
 .header__title {
-  width: 30%;
+  width: 33.33%;
   height: 71px;
   line-height: 1.1em;
   font-size: 35px;
   color: rgb(255, 255, 255);
   font-weight: 100;
   margin: auto;
+  box-sizing: border-box;
+  padding-left: 20px;
 }
 
 /* МЕНЮ */
@@ -57,6 +59,7 @@
   background-color: rgb(64, 186, 188);
   display: flex;
   justify-content: space-between;
+  box-sizing: border-box;
 
 }
 
@@ -80,14 +83,48 @@
 
 /* ОСНОВНОЕ */
 .content {
-  min-height: 300px;
-  background-image: url(/images/building.jpg);
+  /* min-height: 300px; */
+  background-image: url(../images/building.jpg);
   background-repeat: no-repeat;
   background-size: cover;
   margin: 0;
   display: flex;
   padding-bottom: 60px;
 }
+
+.block {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  margin-top: 60px;
+}
+
+.block__title {
+  line-height: 1.1em;
+  font-size: 32px;
+  color: rgb(255, 255, 255);
+  font-weight: 100;
+  padding: 20px 20px;
+  margin: 0;
+  background-color: rgb(85, 74, 88);
+}
+
+.block__title_about-firm {
+  width: 33.33%;
+  box-sizing: border-box;
+}
+
+.block__text {
+  background-color: lightgray;
+  color: rgb(91, 91, 91);
+  line-height: 1.3em;
+  font-size: 19px;
+  font-weight: 100;
+  padding: 20px;
+  margin: 0;
+}
+
+/*************/
 
 .firm-description {
   box-sizing: content-box;
