--- a/styles/styles.css
+++ b/styles/styles.css
@@ -38,6 +38,8 @@
   min-height: 119px;
   background-color: rgb(85, 74, 88);
   display: flex;
+  position: sticky;
+  top: 0;
 }
 
 .header__title {
@@ -130,7 +132,6 @@
 
 .block__description {
   display: flex;
-  border: 1px solid #000;
   background-color: lightgray;
 }
 
