--- a/styles/styles.css
+++ b/styles/styles.css
@@ -105,6 +105,25 @@
   margin-top: 60px;
 }
 
+.block__map {
+  flex-direction: row;
+}
+
+.map {
+  width: 66.67%;
+  height: 700px;
+}
+
+.adress {
+  width: 33.33%;
+  background-color: lightgray;
+  color: rgb(91, 91, 91);
+  line-height: 1.3em;
+  font-size: 19px;
+  font-weight: 100;
+  padding-left: 20px;
+}
+
 .block__title {
   line-height: 1.1em;
   font-size: 32px;
