--- a/styles/styles.css
+++ b/styles/styles.css
@@ -288,6 +288,38 @@
   transform: scale(1.2);
 }
 
+.clients {
+  flex-wrap: wrap;
+  background-color: lightgray;
+  list-style: none;
+  margin: 0;
+  padding: 0;
+  display: flex;
+  gap: 40px;
+  justify-content: space-evenly;
+}
+
+.client {
+  width: 300px;
+  height: 300px;
+}
+
+.client__logo {
+  height: 200px;
+  width: 300px;
+  object-fit: contain;
+}
+
+.client__name {
+  color: rgb(91, 91, 91);
+  line-height: 1.3em;
+  font-size: 25px;
+  font-weight: 100;
+  text-align: center;
+}
+
+
+
 .footer {
   min-height: 119px;
   background-color: lightgray;
