--- a/styles/styles.css
+++ b/styles/styles.css
@@ -22,6 +22,12 @@
 }
 
 /* ОБЩИЕ */
+/* a {
+  margin: 0;
+  padding: 0;
+  text-decoration: none;
+} */
+
 .page {
   min-width: 1100px;
   max-width: 1600px;
@@ -152,6 +158,7 @@
 .block__description {
   display: flex;
   background-color: lightgray;
+  padding-top: 20px;
 }
 
 .block__photo-place {
